# RecognizeObjects

./: README.txt  template作成手順.txt
abe_camera_description/: CMakeLists.txt  package.xml  turtlebot_gazebo_howto.txt
abe_camera_description/stl_models/: FWSSM-D24-V12-T6.STL  FXNAC15-15-F22-N12-MA12-screw.STL  GEABDM2_0-30-20.STL  GEABDM2_0-40-20.STL  HFMQA-SCM-A150-B90-T15-X35-Y45-M12-L70-MA12-screw.STL  LBNR12-screw (1).STL  NCLM15-25-11_0.STL
abe_camera_description/urdf/: abe_kinect.gazebo  abe_kinect.xacro
abe_camera_gazebo/: CMakeLists.txt  package.xml
abe_camera_gazebo/launch/: abe_kinect.launch
abe_gazebo_planner/: CMakeLists.txt  package.xml
abe_gazebo_planner/data/: gazebo_hemi_icosa_div4.csv
abe_gazebo_planner/scripts/: euler_quaternion_converter.py  feature_extractor.py  feature_extractor2.py  feature_extractor_position.py  get_pose_video.sh  gts_icosa_data.py  joint_motion_visualizer.py  plot_3d_icosa.py  sphere_surface_plot.py  split_timeseries_data.py
abe_gazebo_planner/src/: createTemp_Ki.cpp  createTemp_TB.cpp  createTemp_min.cpp  viewpoint_planner.cpp
abe_gazebo_planner/src/higashideSource/: cvmat_player.cpp  get_pose_video.cpp  keypoints.cpp  keypoints_csv.cpp  openpose_depth.cpp  turtlebot_crient.cpp  turtlebot_crient2.cpp
abe_gazebo_planner/srv/: createTemp_switch.srv  gazebo_obj_pose.srv  gazebo_pose.srv  set_service.srv
description_of_linemodtemp/: CMakeLists.txt  package.xml
description_of_linemodtemp/meshes/taskboard_parts/dae/: 10mm_Washer.dae  10mm_Washer_.dae  6mm_Washer.dae  6mm_Washer_.dae  Bearing.dae  Belt.dae  Drive_Shaft.dae  Drive_Shaft_.dae  End_Cap.dae  End_Cap_.dae  M12_Nut_.dae  M12_nut.dae  M3_6.dae  M4_6.dae  M6_Bolt.dae  M6_Bolt_.dae  M6_nut.dae  M6_nut_.dae  Mat.dae  Motor_Pulley.dae  Pin.dae  Pin_.dae  Spacer17_50.dae  Spacer9_50.dae  Spacer9_50_.dae  TB_Plate.dae
description_of_linemodtemp/meshes/taskboard_parts/parts/: BGPSL6_9_L30_F8.sldprt  CBE3_6.sldprt  CBE4_6.sldprt  CBE6_10.sldprt  CLBPS10_17_50.sldprt  CLBPS6_9_50.sldprt  EDCS10.sldprt  KZAF10_75_NA4_WA55_GA20_AA0_b_2.sldprt  MBRFA30_2_P6.sldprt  MBRFA30_2_P6_selfmade.sldprt  MBT4_400.sldprt  MSSFS3_6.sldprt  SLBNR12.sldprt  SLBNR6.sldprt  SPWF10.sldprt  SPWF6.sldprt
description_of_linemodtemp/meshes/taskboard_parts/parts/SBARB6200ZZ_30/: SBARB6200ZZ_30.sldasm  _RRING_C_INT_30_6.sldprt  _SBARB6200ZZ_30_b_2.sldprt  _bearing_6200_4.sldprt
description_of_linemodtemp/meshes/taskboard_parts/stl/: 10mm_Washer.STL  6mm_Washer.STL  Bearing.STL  Belt.STL  CBE3_6.STL  CBE4_6.STL  Drive_Shaft.STL  End_Cap.STL  M12_Nut.STL  M6_Bolt.STL  M6_Nut.STL  MSSFS3_6.STL  Mat.STL  Motor_Pulley.STL  Pin.STL  Spacer17_50.STL  Spacer9_50.STL  TB_Plate.STL
description_of_linemodtemp/urdf/: linemod_template.urdf  linemod_template.xacro
object_recognition/: CMakeLists.txt  package.xml
object_recognition/scripts/: pixel_coords_trans.py  pixel_coords_trans_openCampus.py  pixel_coords_trans_ver1_2.py
object_recognition/src/: createTemp_Ki_gazebo.cpp  createTemp_TB_gazebo.cpp  gazebo_linemod_multi.cpp  gazebo_linemod_multi_sample.cpp  gazebo_linemod_rgb.cpp  gazebo_linemod_rgb.cpp.origin  gazebo_linemod_rgb_sample.cpp  gazebo_linemod_rgb_self_set.cpp  linemod_2d.cpp  linemod_4kvideo.cpp  linemod_jsk_sample.cpp  linemod_multi.cpp  linemod_offline.cpp  linemod_rgb.cpp  linemod_rgb.cpp.backup
